# nodo

./: .gitignore  Cargo.toml  justfile  rustfmt.toml
examples/: Cargo.toml  ping.rs
inspector/: Cargo.toml
inspector/src/: error_log.rs  lib.rs  main.rs  node_ascii_art_tui_widget.rs  nodo_app_link.rs  tui_app_state.rs  tui_style.rs  tui_widget_selection.rs  widget_home.rs  widget_manifold.rs  widget_statistics.rs
inspector_proto/: Cargo.toml  build.rs
inspector_proto/src/: inspector.proto  lib.rs
nodo/: Cargo.toml  README.md
nodo/src/: inspector.rs  lib.rs  runtime.rs  runtime_control.rs  sleep.rs  task.rs  zield.rs
nodo/src/channels/: bundle.rs  connect.rs  double_buffer_channel.rs  mod.rs  stage_queue.rs  timeseries.rs
nodo/src/codelet/: codelet_instance.rs  executor.rs  lifecycle.rs  manifold.rs  mod.rs  schedule.rs  sequence.rs  state_machine.rs  statistics.rs  task_clock.rs  transition.rs  vise.rs
nodo/tests/: alice_bob_codelets.rs  custom_status.rs
nodo/tests/common/: mod.rs
nodo_async/: Cargo.toml
nodo_async/src/: lib.rs
nodo_core/: Cargo.toml
nodo_core/src/: clock.rs  lib.rs  message.rs  outcome.rs  serializable.rs  stamped.rs  timestamp.rs
nodo_derive/: Cargo.toml
nodo_derive/src/: lib.rs
nodo_json/: Cargo.toml
nodo_json/src/: lib.rs
nodo_nng/: Cargo.toml
nodo_nng/src/: bincode_format.rs  lib.rs  pub.rs  snappy_bincode_format.rs  sub.rs
nodo_record/: Cargo.toml
nodo_record/src/: lib.rs  mcap_writer.rs  recorder.rs  schema_set.rs  serializer.rs
nodo_runtime/: Cargo.toml
nodo_runtime/src/: executor.rs  inspector.rs  lib.rs  runtime.rs  schedule_executor.rs  state_machine.rs  statistics.rs
nodo_std/: Cargo.toml
nodo_std/src/: callback_rx.rs  callback_tx.rs  cloner.rs  convert.rs  deserializer.rs  identity.rs  join.rs  lib.rs  log.rs  multiplexer.rs  null_rx.rs  null_tx.rs  pipe.rs  serializer.rs  sink.rs  source.rs  terminator.rs  topic_join.rs  topic_split.rs
