# Copyright 2024 by David Weikersdorfer
[workspace]
resolver = "2"
members = [
  "examples", "inspector",
  "nodo",
  "nodo_core",
  "nodo_derive",
  "nodo_json",
  "nodo_nng",
  # "nodo_record",
  "nodo_std",
]

[workspace.dependencies]
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11" }
eyre = "0.6"
log = "0.4"
nng = "1.0"
serde = { version = "1.0", features = ["derive"] }
