[package]
name = "inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
ctrlc = { version = "3.0", features = ["termination"] }
inspector_proto = { workspace = true }
log = "0.4"
nng = "1.0.1"
prost = { workspace = true }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
url = "2.3.1"
