[package]
name = "inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
log = { workspace = true }
nodo = { path = "../nodo" }
nodo_runtime = { path = "../nodo_runtime" }
ratatui = "0.28"
regex = "1.11"
serde = { workspace = true }
serde_json = "1.0"
