[package]
name = "nodo"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6"
log = "0.4"
nodo_core = { path = "../nodo_core"}
nodo_derive = { path = "../nodo_derive"}
paste = "1.0"
profiling = "1.0"
thiserror = "1"

[dev-dependencies]
color-eyre = "0.6"
env_logger = "*"
nodo_runtime = { path = "../nodo_runtime" }
nodo_std = { path = "../nodo_std" }
