[package]
name = "nodo_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nodo = { path = "../nodo"}
nodo_core = { path = "../nodo_core"}
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
