[package]
name = "nodo_nng"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
crc = "3.2.1"
log = "0.4"
nng = { workspace = true }
nodo = { path = "../nodo"}
nodo_core = { path = "../nodo_core"}
nodo_std = { path = "../nodo_std"}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.10"
nodo_runtime = { path = "../nodo_runtime" }
