[package]
name = "nodo_record"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
mcap = "0.8"
nodo = { path = "../nodo"}
nodo_core = { path = "../nodo_core"}
nodo_std = { path = "../nodo_std"}
