[package]
name = "nodo_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
ctrlc = "3.4"
eyre = "0.6"
log = "0.4"
lz4_flex = { version = "0.11" }
nng = { workspace = true }
nodo = { path = "../nodo"}
nodo_core = { path = "../nodo_core"}
nodo_std = { path = "../nodo_std"}
serde = { workspace = true }
thiserror = "1"
